--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -1,12 +1,13 @@
 extends layout
 
 block content
+
     h1 #{title}
 
     form(method='POST' action='')
         div.form-group
             label(for='name') Genre:
-            input#name.form-control(type='text' placeholder='Fantasy, Poetry etc.' name='name' value=(!genre ? '' : genre.name))
+            input#name.form-control(type='text' placeholder='Fantasy, Poetry etc.' name='name' required='true' value=(!genre ? '' : genre.name) )
         button.btn.btn-primary(type='submit') Submit
 
     if errors
